THRIFT-4031: Fix invalid code generation for list of typedef'ed built-in types Client: Go Patch: D. Can Celasun <can@dcc.im>

This closes #1207

This commit reverts 12d430e723b020f7a8ce42a40c19edf88f948367 which
caused invalid code to be generated for certain types.